src/index.css
@import 'tailwindcss';

body {
  @apply font-sans;
  line-height: 1.4;
  letter-spacing: -0.03rem;
}

:root {
  /* =====================================================
   PRIMITIVE COLOR TOKENS
===================================================== */

  /* Primary / Brand */
  --primary-default: #6201e0;
  --primary-100: #efe6fc;
  --primary-200: #d0b3f6;
  --primary-400: #7c35d9;
  --primary-600: #4e01b3;
  --primary-700: #3b0186;

  /* Gradient */

  --gradient-primary: linear-gradient(
    90deg,
    var(--primary-200) 0%,
    var(--primary-default) 50%,
    var(--primary-600) 100%
  );

  --gradient-line: linear-gradient(
    90deg,
    var(--primary-200),
    var(--primary-default)
  );

  /* GREY SCALE */

  --gray-primary: oklch(from #121212 l c h);
  --gray-100: #fafafa;
  --gray-200: #ececec;
  --gray-250: #cecece;
  --gray-400: #9d9d9d;
  --gray-500: #707070;
  --gray-600: #4d4d4d;
  --gray-700: #303030;
  --gray-800: #222222;

  --gray-disabled: #bdbdbd;

  /* BASE */

  --white: #ffffff;
  --black: #000000;

  /* SHADOW  */

  --shadow-box-value: 0px 4px 4px rgba(0, 0, 0, 0.25);
  --shadow-modal-value: 0px 0px 16px rgba(160, 160, 160, 0.35);

  /* STATUS PALETTE */
  --answer-active: #04c730;

  /* =====================================================
    SEMANTIC TOKENS
===================================================== */

  /* Text */

  --text-main: var(--gray-primary);
  --text-sub: var(--gray-600);
  --text-modal: var(--gray-700);
  --text-chatbot: var(--gray-500);
  --text-light: var(--gray-400);
  --text-disabled: var(--gray-disabled);

  /* Surface */

  --surface-default: var(--white);
  --surface-sub: var(--gray-100);
  --surface-disabled: var(--gray-200);

  /* Primary */

  --primary-color: var(--primary-default);
  --primary-hover: var(--primary-600);
  --primary-active: var(--primary-700);

  /* Gradient */

  --gradient-brand: var(--gradient-primary);
  --gradient-divider: var(--gradient-line);

  /* Answer */

  --answer-active-color: var(--answer-active);

  /* Shadow */

  --shadow-box-color: var(--shadow-box-value);
  --shadow-modal-color: var(--shadow-modal-value);

  /*Overlay*/
  --bg-overlay: var(--gray-primary);
}

@theme inline {
  /* Text */

  --color-text-main: var(--text-main);
  --color-text-sub: var(--text-sub);
  --color-text-modal: var(--text-modal);
  --color-text-chatbot: var(--text-chatbot);
  --color-text-light: var(--text-light);
  --color-text-disabled: var(--text-disabled);

  /* Surface */

  --color-surface-default: var(--surface-default);
  --color-surface-sub: var(--surface-sub);
  --color-surface-disabled: var(--surface-disabled);

  /*Overlay*/
  --color-bg-overlay: var(--bg-overlay);

  /* Border Line */
  --color-border-line: var(--gray-250);

  /* Primary */
  --color-primary-100: var(--primary-100);
  --color-primary-200: var(--primary-200);
  --color-primary-400: var(--primary-400);
  --color-primary-600: var(--primary-600);
  --color-primary-700: var(--primary-700);
  --color-primary: var(--primary-color);
  --color-primary-hover: var(--primary-hover);
  --color-primary-active: var(--primary-active);

  /* Answer */

  --color-answer-active: var(--answer-active-color);

  /* Gradient */

  --gradient-brand: var(--gradient-brand);
  --gradient-divider: var(--gradient-divider);

  /* Shadow */

  --shadow-box: var(--shadow-box-color);
  --shadow-modal: var(--shadow-modal-color);

  /* default font */
  --font-sans: 'Pretendard', ui-sans-serif, system-ui, sans-serif;

  /* 로딩 컴포넌트용 | 높이: -8px, 속도: 0.6s */
  --animate-jump: jump 0.6s ease-in-out infinite;

  @keyframes jump {
    0%,
    100% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-8px);
    }
  }
}

div.w-md-editor .w-md-editor-toolbar {
  min-height: 100px !important;
  max-height: 100px !important;
  padding: 0 16px !important;
  display: flex !important;
  align-items: center !important;
  box-sizing: border-box !important;
}

div.w-md-editor .w-md-editor-toolbar > ul {
  display: flex !important;
  align-items: center !important;
  margin: 0 !important;
  padding: 0 !important;
  height: 40px !important;
}

div.w-md-editor .w-md-editor-toolbar > ul > li {
  display: flex !important;
  align-items: center !important;
}

div.w-md-editor .w-md-editor-toolbar > ul > li > button {
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
}

